# ai-chatbot-memory

./: README.md  pyproject.toml
app/: main.py
app/api/v1/: endpoint.py
app/core/: config.py  logger.py
app/db/: redis_client.py
app/factory/: factory.py
app/middleware/: logging_middleware.py
app/models/: chat_model.py
app/provider/: groq_provider.py  llm_provider.py  openai_provider.py
app/schemas/: chat_schema.py
app/services/: chat_service.py  memory_service.py
app/services/llm/: factory.py  groq_provider.py  llm_provider.py
